# national-gallery-api

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: entity_disambiguation.ipynb
src/national_gallery_api/: __init__.py  client.py  exceptions.py  models.py  queries.py  rendering.py  transport.py
src/national_gallery_api/models/: __init__.py  agent.py  base.py  collection.py  concept.py  event.py  material.py  person.py  work.py
tests/: conftest.py  test_client.py  test_client_async.py  test_integration.py  test_models.py  test_node.py  test_queries.py  test_rendering.py  test_transport.py
tests/cassettes/test_integration/: test_async_search_people.yaml  test_get_work_by_pid.yaml  test_iter_all_pages_real_data.yaml  test_search_people_returns_real_results.yaml
tests/data/: _capture.py  archive.json  concept.json  event.json  exhibition.json  location.json  media.json  organisation.json  package.json  person.json  place.json  publication.json  work.json
