[project]
name = "national-gallery-api"
version = "0.1.0"
description = "Python client for the National Gallery (London) Elasticsearch API"
keywords = ["national gallery", "ng", "api", "elasticsearch", "art", "museum", "london"]
readme = "README.md"
authors = [
    { name = "William Thorne", email = "wthorne1@sheffield.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "hishel>=1.2.1",
    "httpx>=0.28.1",
    "httpx-retries>=0.5.0",
    "pydantic>=2.13.4",
]

[tool.ruff]
exclude = [
    "dist",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    ".git"
]

line-length = 119
indent-width = 4

target-version = "py312"

[tool.ruff.lint]

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
