[project]
name = "national-gallery-api"
version = "0.1.1"
description = "Python client for the National Gallery (London) Elasticsearch API"
keywords = ["national gallery", "ng", "api", "elasticsearch", "art", "museum", "london"]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "William Thorne", email = "wthorne1@sheffield.ac.uk" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "hishel>=1.2.1",
    "httpx>=0.28.1",
    "httpx-retries>=0.5.0",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
async = ["hishel[async]>=1.2.1"]

[project.urls]
Homepage = "https://github.com/wrmthorne/national-gallery-api"
Repository = "https://github.com/wrmthorne/national-gallery-api"
Issues = "https://github.com/wrmthorne/national-gallery-api/issues"

[tool.ruff]
exclude = [
    "dist",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    ".git"
]

line-length = 119
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modern syntax for your py312 target)
    "B",    # flake8-bugbear (likely bugs)
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # Ruff-specific rules
]
ignore = []

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyrefly]
project-includes = ["src"]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"


[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hishel[async]>=1.2.1",
    "ipykernel>=7.3.0",
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-recording>=0.13.4",
    "ruff>=0.15.16",
]
